 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.6rc1

 - [ZBX-3973] added logging of proxy mode (active/passive) at startup (rudolfs)
 - [ZBX-3902] fixed possible zombie states in UNIX, moved watchdog (server) and heartbeats (proxy) to separate processes (main process just waits), added more logging to exiting Windows agent (rudolfs)
 - [ZBX-3166] fixed application updating in Template linking event. Changed linked Template color in application page. Added param NOEMPTY for popup page witch allows hide Empty button in application and item pages (Eduard)
 - [ZBX-3565] reformating media types in notifications page, adding links to media types (Eduard)
 - [ZBX-3784] added validation on duplicate discovery rule name (Eduard)
 - [ZBX-3733] make possible to save Device uniqueness criteria status (discovery rule) in cloning event (Eduard)
 - [ZBX-3845] check, if this user group is used in the config, if so it cannot be deleted (Eduard)
 - [ZBX-3911] fixed wrong trigger expression parsing when key parameters contained "(" (KB)
 - [ZBX-3856] fixed new group creation from template page (Eduard)
 - [ZBX-3840] fixed possible path disclosure (Vedmak)
 - [ZBXNEXT-849] added example MySQL UserParameter to monitor database and table size (Richlv)
 - [ZBX-3935] fixed possible function redeclaration error (Vedmak)
 - [ZBX-3944] added support of multibyte NIC names for the net.if.* checks under Windows (Sasha)
 - [ZBX-3947] fixed compilation under AIX 5.2 with fileset lower than 5.2.0.40 (Sasha)
 - [ZBX-3947] fixed compilation under AIX 5.2 with enabled IPv6 (Sasha)